<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_button_teacher_assign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/code"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/admin_code_to_remove"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_button_create" />

    <Button
        android:id="@+id/admin_button_dbinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/role"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/admin_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/default_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="67dp"
        android:layout_height="43dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/admin_output_teacher_to_assign"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/empty"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/admin_button_assign_teacher"
        app:layout_constraintTop_toBottomOf="@+id/admin_button_create_subject" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="293dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:text="@string/create_subject"
        android:textColor="#FF0000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/admin_output_code"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_button_select_role" />

    <EditText
        android:id="@+id/admin_input_sec_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_input_name" />

    <EditText
        android:id="@+id/admin_code_to_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/admin_button_remove_account"
        app:layout_constraintTop_toBottomOf="@+id/admin_output_code" />

    <Button
        android:id="@+id/admin_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/code"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/admin_output_code"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@+id/admin_button_create"
        app:layout_constraintTop_toBottomOf="@+id/admin_button_select_role" />

    <EditText
        android:id="@+id/admin_subject_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/admin_button_remove_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_subject_input" />

    <Button
        android:id="@+id/admin_button_assign_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign_teacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_button_remove_subject" />

    <TextView
        android:id="@+id/admin_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_button_create_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/button_create"
        app:layout_constraintEnd_toStartOf="@+id/admin_button_remove_subject"
        app:layout_constraintTop_toBottomOf="@+id/admin_subject_input" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="241dp"
        android:layout_height="44dp"
        android:text="@string/create_account"
        android:textColor="#FF0000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_headline" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/admin_button_remove_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_output_code" />

    <Button
        android:id="@+id/admin_button_select_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_input_sec_name" />

    <TextView
        android:id="@+id/admin_selected_role"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/admin_input_sec_name" />

    <Button
        android:id="@+id/admin_button_select_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/button_select_teacher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_button_create_subject" />

    <Button
        android:id="@+id/admin_button_find_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_find_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_subject_input" />

</androidx.constraintlayout.widget.ConstraintLayout>