<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UczenActivity">

    <TextView
        android:id="@+id/student_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/student_text_my_grades"
        android:layout_width="241dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/student_my_grades"
        android:textColor="#FF0000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_headline" />

    <TextView
        android:id="@+id/student_text_subject"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/text_subject"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_text_my_grades"
        tools:text="@string/text_subject" />

    <TextView
        android:id="@+id/student_output_subject"
        android:layout_width="291dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_text_subject" />

    <Button
        android:id="@+id/student_button_select_subject"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_text_subject"
        app:layout_constraintTop_toBottomOf="@+id/student_text_my_grades" />

    <Button
        android:id="@+id/student_button_view_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="160dp"
        android:text="@string/button_show_grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_output_subject" />

    <TextView
        android:id="@+id/student_output_grades"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="31dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_button_view_grade" />
</androidx.constraintlayout.widget.ConstraintLayout>